k8s/overlays/prod/string-emails/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: string-email
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: string-email
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
