k8s/overlays/prod/string-emails/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: string-email
  namespace: prod

spec:
  podSelector:
    matchLabels:
      app: string-email

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              string-email-client: "true"
      ports:
        - protocol: TCP
          port: 8080

  egress:
    - to:
        - ipBlock:
            cidr: 10.10.10.1/32
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 587
